finished the code, time to run it through the linter.

--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Hello World in Javascript. -->
+<!-- Hello World Extra in Javascript. -->
 <html>
  <head>
    <meta charset="utf-8">
@@ -12,6 +12,8 @@
  </head>
   <body>
     <script src="script.js"></script>
-    <p class="text">Javascript Webpage</p>
+    <p class="textextra">Javascript Webpage</p>
+    <button onclick="imageAppear()">Hello World Image</button>
+    <img id="helloworldimage" src="images/black.jpg">
   </body>
 </html>
