fixed linter errors

--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
   <body>
     <script src="script.js"></script>
     <p class="textextra">Javascript Webpage</p>
-    <button onclick="imageAppear()">Hello World Image</button>
-    <img id="helloworldimage" src="images/black.jpg">
+    <button onclick="imageAppear ()">Hello World Image</button>
+    <img id="helloworldimage" src="images/black.jpg" alt="null">
   </body>
 </html>
